# BowlsRecipeScraper

./: LICENSE  README.md  setup.cfg  setup.py
bowlsRecipeScraper/: __init__.py  bowlsRecipeScraper.py
bowlsRecipeScraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
