[metadata]
name = bowlsRecipeScraper
version = 0.0.1
author = Valeria Gonzalez
author_email = valeriasegura33@gmail.com
description = Recipe Scraper for bowlsofdelicious.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valeria-gonzalez/BowlsRecipeScraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True